[tool.poetry]
name = "synthraddiffusion"
version = "0.1.0"
description = ""
authors = ["Bene Arnthof <benearnthof@hotmail.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
tqdm = "^4.65.0"
torch = "^2.0.1"
einops = "^0.6.1"
rotary-embedding-torch = "^0.2.3"
torchvision = "^0.15.2"
matplotlib = "^3.7.1"
einops-exts = "^0.0.4"
pytorch-lightning = "^2.0.2"
imageio = "^2.28.1"
monai = "^1.1.0"
nilearn = "^0.10.1"
scikit-image = "^0.20.0"
torchio = "^0.18.91"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
